apps/blog/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: blog-service
spec:
  selector:
    app: blog-app
  ports:
  # Default port used by the image
  - port: 4000
